style: fix readability issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,10 @@
 
 /* Base */
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 *::selection {
     color: var(--bg-color);
     background-color: var(--fg-color);
@@ -99,12 +103,9 @@ sub, label {
 }
 
 p {
+    line-height: 1.35;
     margin-block-start: 0.5rem;
     margin-block-end: 0.5rem;
-}
-
-article>p {
-    line-height: 1.3;
 }
 
 blockquote {
@@ -112,9 +113,15 @@ blockquote {
     padding: 0.25em 0.25em 0.25em 1em;
     border-left: 5px solid var(--primary-color);
     background-color: black;
+    word-wrap: break-word;
+}
+
+img {
+    max-width: 100%;
 }
 
 figure {
+    margin: 1em 0;
     text-align: center;
 }
 
@@ -128,6 +135,7 @@ code {
     border-radius: 5px;
     border: 1px dotted var(--sub-color);
     font-size: 0.85rem;
+    word-wrap: break-word;
     font-family: "JetBrains Mono", monospace;
 }
 
@@ -136,6 +144,7 @@ pre>code {
     padding: 0;
     border: none;
     font-size: 0.8rem;
+    word-wrap: normal;
 }
 
 li {
@@ -339,6 +348,7 @@ body>footer {
 
 #tags>span {
     margin-right: 0.25em;
+    white-space: nowrap;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
@@ -351,6 +361,8 @@ body>footer {
 
 .highlight {
     position: relative;
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
 }
 
 .highlight>div {
@@ -360,6 +372,7 @@ body>footer {
 .highlight pre {
     margin: 0.5em 0;
     margin-right: .5em;
+    white-space: pre;
 }
 
 .highlight pre code[class*="language-"]::before {
@@ -393,18 +406,22 @@ body>footer {
     background-color: #f7df1e;
 }
 
+.highlight pre code[class="language-php"]::before {
+    content: "PHP";
+    color: black;
+    background-color: #777bb3;
+}
+
 .highlight pre code[class*="language-python"]::before {
     content: "Python";
-    font-weight: bold;
-    color: yellow;
-    background-color: blue;
+    color: #ffd441;
+    background-color: #3477ac;
 }
 
 .highlight pre code[class*="language-go"]::before {
     content: "Go";
-    font-weight: bold;
     color: black;
-    background-color: cyan;
+    background-color: #6ad7e5;
 }
 
 /* Others */
